fix: styling the react json component for the content to stop jumping

--- a/src/popup/App.css
+++ b/src/popup/App.css
@@ -3,6 +3,12 @@
   color: #fafafa;
 }
 
-.app h1 {
+/* TODO: a menu */
+.app h2 {
   margin: 1rem;
+  color: #fcde5c;
+  font-weight: normal;
+  font-size: 20px;
+  margin-left: 2rem;
+  cursor: pointer;
 }
